--- a/sa/t1.task.md
+++ b/sa/t1.task.md
@@ -1,12 +1,13 @@
 # Atividade em sala
 
 ## Levantamento de possíveis domínios de aplicações com impacto na realidade de Goiânia
-- Pedido e entrega a domicílio de compras de supermercado
->- Perdemos muito tempo indo ao supermercado e pegando item por item. Seria mais cômodo pedir tudo isso e receber em casa.
->- Um novo modelo de negócio: quem é o responsável por fazer a compra? O entregador? Um novo funcionário do supermercado?
 
-- Compra/recarga de créditos para transporte público em Goiânia
->- Como usuário de transporte público metropolitano de Goiânia, eu sempre quis recarregar o meu cartão através da internet e/ou aplicativo. Muitas vezes estamos com pressa e não conseguimos recarregar no terminal ou não temos um ponto de recarga próximo à casa/trabalho.
+### Pedido e entrega a domicílio de compras de supermercado
+- Perdemos muito tempo indo ao supermercado e pegando item por item. Seria mais cômodo pedir tudo isso e receber em casa.
+- Um novo modelo de negócio: quem é o responsável por fazer a compra? O entregador? Um novo funcionário do supermercado?
 
-- Agenda cultural de Goiânia
->- Em Goiânia (e outras cidades), rola muita coisa que gostaríamos de ir, mas nem ficamos sabendo.
+### Compra/recarga de créditos para transporte público em Goiânia
+- Como usuário de transporte público metropolitano de Goiânia, eu sempre quis recarregar o meu cartão através da internet e/ou aplicativo. Muitas vezes estamos com pressa e não conseguimos recarregar no terminal ou não temos um ponto de recarga próximo à casa/trabalho.
+
+### Agenda cultural de Goiânia
+- Em Goiânia (e outras cidades), rola muita coisa que gostaríamos de ir, mas nem ficamos sabendo.
