--- a/sa/t1.task.md
+++ b/sa/t1.task.md
@@ -5,9 +5,13 @@
 ### Pedido e entrega a domicílio de compras de supermercado
 - Perdemos muito tempo indo ao supermercado e pegando item por item. Seria mais cômodo pedir tudo isso e receber em casa.
 - Um novo modelo de negócio: quem é o responsável por fazer a compra? O entregador? Um novo funcionário do supermercado?
+- Induz economia, uma vez que não ficaremos passando por todas as prateleiras e acabando por pegar itens que não precisamos na realidade.
+>#### Possíveis concorrentes: "Supermercado Now"
 
 ### Compra/recarga de créditos para transporte público em Goiânia
 - Como usuário de transporte público metropolitano de Goiânia, eu sempre quis recarregar o meu cartão através da internet e/ou aplicativo. Muitas vezes estamos com pressa e não conseguimos recarregar no terminal ou não temos um ponto de recarga próximo à casa/trabalho.
+>#### Possíveis concorrentes: Em Goiânia, nenhum concorrente. No geral, "Recarga Agora", "CittaMobi"
 
 ### Agenda cultural de Goiânia
 - Em Goiânia (e outras cidades), rola muita coisa que gostaríamos de ir, mas nem ficamos sabendo.
+>#### Possíveis concorrentes: Redes sociais (Seção de Eventos)
